Update interface and style

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
+
 #root {
   white-space: pre-line;
 }
 
 .App {
   text-align: center;
+  font-family: 'ZCOOL KuaiLe', cursive;
 }
 
 .App-logo {
