--- a/src/shared/util/_variables.scss
+++ b/src/shared/util/_variables.scss
@@ -1,4 +1,5 @@
 $white-ish: #f5f7e9;
+$dark-white: #eae9e1;
 $beige: #b7b398;
 $light-light-brown: #cfaf8e;
 $light-brown: #ad7a3e;
@@ -7,13 +8,14 @@ $light-yellow: #fff09c;
 $yellow: #ffeb54;
 $orange: #fcaf4e;
 $light-green: #bcf8cb;
-$dark-green: #66b888;
+$dark-green: #85c7a0;
 $green: #a4d740;
 $light-blue: #b1f5fb;
 $blue: #71b6f7;
 $lilac: #dbb4f8;
 $purple: #9379c2;
 $pink: #fbacc7;
+$xiyou: #F28B73;
 $red-orange: #ee6668;
 $red: #c93335;
 $black-ish: #39383d;
