Add bugs, header

--- a/src/entities/bugs/bugs.scss
+++ b/src/entities/bugs/bugs.scss
@@ -1,12 +1,12 @@
 @import "src/shared/util/variables";
 
-#fish-page {
+#bugs-page {
   font-family: 'ZCOOL KuaiLe', cursive;
   background-color: $light-green;
   padding: 20px;
 }
 
-#fish-page-body {
+#bugs-page-body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
