--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
+@import './shared/util/variables';
 
 #root {
   white-space: pre-line;
@@ -9,37 +10,17 @@
   font-family: 'ZCOOL KuaiLe', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#header {
+  .navbar {
+    background-color: $dark-green !important;
   }
-}
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  box-shadow: 0px 5px 15px #27272780;
+  -webkit-box-shadow: 0px 5px 15px #27272780;
+  -moz-box-shadow: 0px 5px 15px #27272780;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  z-index: 99999;
 }
