--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
 @import './shared/util/variables';
 
+html, body {
+  height: 100%;
+}
+
 #root {
   white-space: pre-line;
+  height: 100%;
 }
 
 .App {
+  height: 100%;
   text-align: center;
   font-family: 'ZCOOL KuaiLe', cursive;
 }
@@ -14,15 +20,29 @@
   .navbar {
     background-color: $dark-green !important;
   }
-  position: sticky;
-  position: -webkit-sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
 
   box-shadow: 0px 5px 15px #27272780;
   -webkit-box-shadow: 0px 5px 15px #27272780;
   -moz-box-shadow: 0px 5px 15px #27272780;
 
   z-index: 99999;
+
+  flex: 0 1 auto;
+}
+
+#refresh-but {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 20px;
+  right: 20px;
+}
+
+#route-container {
+  margin-top: 56px;
+  height: calc(100vh - 56px);
 }
 
 $breakpoint-tablet: 768px;
@@ -39,7 +59,13 @@ $breakpoint-tablet: 768px;
       width: 100%;
       display: flex;
       flex-direction: row;
-      overflow: scroll;
+      overflow-x: scroll;
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
+
+    ul::-webkit-scrollbar {
+      display: none;
     }
   }
 }
