--- a/src/shared/layout/home/login.scss
+++ b/src/shared/layout/home/login.scss
@@ -3,3 +3,33 @@
     width: 100% !important;
   }
 }
+
+#login-google, #login-discord {
+  cursor: pointer;
+}
+
+.pre-login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+
+  .providers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .text-or {
+    text-align: center;
+  }
+}
+
+#login-remember-me {
+  margin-left: 0 !important;
+}
+
+#login-remember-me-label {
+  margin-left: 1.5em;
+}
